--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                   </p>
                     <ul class="content__container__list">
                         <li class="content__container__list__item"> mundo!</li>
-                        <li class="content__container__list__item">Soy Andrés</li>
+                        <li class="content__container__list__item">soy Andrés</li>
                         <li class="content__container__list__item">mundo!</li>
-                        <li class="content__container__list__item">Soy Andrés</li>
+                        <li class="content__container__list__item">soy Andrés</li>
                     </ul>
                 </div>
             </div>
@@ -119,7 +119,7 @@
             <article class="card">
                 <div class="face face1">
                     <div class="content">
-                        <img src="index.html">
+                        <img src="./images/morena.png">
                         <h3>Morena</h3>
                     </div>
                 </div>
@@ -129,6 +129,23 @@
                         <div class="contentLinks">
                             <a href="https://github.com/andrespujol/morena" target="_blank">Github</a>
                             <a href="https://morena-seven.vercel.app//" target="_blank">Sitio</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="card">
+                <div class="face face1">
+                    <div class="content">
+                        <img src="./images/logo.png">
+                        <h3>Portfolio</h3>
+                    </div>
+                </div>
+                <div class="face face2">
+                    <div class="content">
+                        <p>Portfolio estático. Próximamente en vue.</p>
+                        <div class="contentLinks">
+                            <a href="https://github.com/andrespujol/portfolio.git" target="_blank">Github</a>
+                            <a href="https://andrespujol.github.io/portfolio/" target="_blank">Sitio</a>
                         </div>
                     </div>
                 </div>
