--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <article class="card">
                 <div class="face face1">
                     <div class="content">
-                        <img src="./images/yugen.png">
+                        <img src="./images/yugen.png" alt="portada proyecto Yugen">
                         <h3>Yugen</h3>
                     </div>
                 </div>
@@ -142,10 +142,27 @@
                 </div>
                 <div class="face face2">
                     <div class="content">
-                        <p>Portfolio estático. Próximamente en vue.</p>
+                        <p>Portfolio estático. </p>
                         <div class="contentLinks">
                             <a href="https://github.com/andrespujol/portfolio.git" target="_blank">Github</a>
                             <a href="https://andrespujol.github.io/portfolio/" target="_blank">Sitio</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="card">
+                <div class="face face1">
+                    <div class="content">
+                        <img src="./images/Isotipo.png" class="logoFachari">
+                        <h3>Fachari</h3>
+                    </div>
+                </div>
+                <div class="face face2">
+                    <div class="content">
+                        <p>Proyecto para un emprendimiento dedicado a la venta de ropa mayorista. Hecha en React. </p>
+                        <div class="contentLinks">
+                            <a href="https://github.com/andrespujol/fachari" target="_blank">Github</a>
+                            <a href="fachari.vercel.app" target="_blank">Sitio</a>
                         </div>
                     </div>
                 </div>
