actualicé link de proyecto

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <p>Proyecto para un emprendimiento dedicado a la venta de ropa mayorista. Hecha en React. </p>
                         <div class="contentLinks">
                             <a href="https://github.com/andrespujol/fachari" target="_blank">Github</a>
-                            <a href="fachari.vercel.app" target="_blank">Sitio</a>
+                            <a href="https://fachari-andrespujol.vercel.app/" target="_blank">Sitio</a>
                         </div>
                     </div>
                 </div>
